--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -46,4 +46,7 @@
     
     <!-- the padding on the top of the statusbar -->
     <dimen name="status_bar_padding_top">7dp</dimen>
+    
+    <!-- the padding on the start of the statusbar -->
+    <dimen name="status_bar_padding_start">5dp</dimen>
 </resources>
