--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -16,10 +16,6 @@
 */
 -->
 <resources>
-    <dimen name="config_rounded_mask_size">156px</dimen>
-    <dimen name="config_rounded_mask_size_top">@dimen/config_rounded_mask_size</dimen>
-    <dimen name="config_rounded_mask_size_bottom">@dimen/config_rounded_mask_size</dimen>
-
     <!-- The padding on the side of the navigation bar. Must be greater than or equal to
          navigation_extra_key_width -->
     <dimen name="navigation_side_padding">80px</dimen>
@@ -41,12 +37,12 @@
     default that should be overridden by device-specific overlays. -->
     <dimen name="physical_power_button_center_screen_location_y">@dimen/physical_fingerprint_sensor_center_screen_location_y</dimen>
 
+    <!-- for 20dp of padding at 3.5px/dp at default density -->
+    <dimen name="rounded_corner_content_padding">52px</dimen>
+
     <!-- Height of the status bar header bar when on Keyguard -->
     <dimen name="status_bar_header_height_keyguard">@dimen/navigation_side_padding</dimen>
     
     <!-- the padding on the top of the statusbar -->
     <dimen name="status_bar_padding_top">7dp</dimen>
-    
-    <!-- the padding on the start of the statusbar -->
-    <dimen name="status_bar_padding_start">5dp</dimen>
 </resources>
